--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="flavor">Rasa</string>
     <string name="subtotal_price">Subtotal : Rp %s</string>
     <string name="total_price">Total %s</string>
+    <string name="nama">Nama</string>
     <string name="alamat">Alamat</string>
     <string name="telepon">Telepon</string>
     <string name="btn_submit">Submit</string>
